Design changes for whole app.

--- a/KidsAR-Android/app/src/main/assets/privacy.html
+++ b/KidsAR-Android/app/src/main/assets/privacy.html
@@ -19,11 +19,8 @@
         }
          @font-face {
             font-family: "Customfont";
-            src: url('file:///android_asset/comic_sans_ms.ttf');
+            src: url('file:///android_asset/gothamrounded_book.otf');
         }
-
-
-
 
     </style>
 </head>
